--- a/website/src/css/main.css
+++ b/website/src/css/main.css
@@ -1,4 +1,5 @@
 * {
+    font-family: Arial, Helvetica, sans-serif;
     padding: 0px;
     margin: 0px;
 }
@@ -7,9 +8,7 @@ header {
     justify-content: space-between;
     background-color: white;
     align-items: center;
-    padding-right: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 32px 15px 32px 0px;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -19,8 +18,6 @@ header>nav {
     display: flex;
     justify-content: space-between;
     margin-right: 80px;
-    font-family: Arial, Helvetica, sans-serif;
-
 }
 header>nav>a {
     font-weight: bold;
@@ -28,6 +25,12 @@ header>nav>a {
     font-size: 20;
     color: black;
 }
+
+.colors {
+    background-color: blue;
+}
+
+
 .logo-img {
     width: 40px;
     display: flex;
@@ -39,6 +42,8 @@ body {
 }
 .hero-container {
     position: relative;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.309), rgba(32, 0, 160, 0.104));
+
 }
 .hero-container>div>img {
     width: 100%;
@@ -48,14 +53,18 @@ body {
     font-size: 40px;
     position: absolute;
     top: 30%;
-    left: 50%;
+    left: 20%;
     transform: translate(-50%, -50%);
     text-align: center;
     color: white;
+    width: 30%;
+    text-align: left;
 }
 .hero-text>h2 {
-    font-size: 30px;
+    font-size: 25px;
+    font-weight: lighter;
 }
+
 #button {
     padding: 10px 20px;
     font-size: 16px;
