--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -3,11 +3,16 @@
     padding: 0em;
     margin: 0em;
 }
+html {
+    scroll-behavior: smooth;
+  }
+
 header {
     background-color: #2B2929;
     top: 0;
     z-index: 1000;
 }
+
 .navigation-container {
     display: flex;
     align-items: center;
@@ -15,10 +20,12 @@ header {
     margin: 0em 7em 0em 0em;
     height: 100%;
 }
+
 nav {
     display: flex;
     gap: 10em;
 }
+
 nav>div>a {
     font-weight: bold;
     font-size: 1em;
@@ -26,44 +33,55 @@ nav>div>a {
     color: white;
     column-count: 5;
 }
+
 nav>div>a:hover {
     color: #9f6aa1;
 }
+
 nav>div>a:active {
     color: #8c2e91;
 }
+
 .dropdown {
     display: none;
 }
+
 .logo {
     width: auto;
     height: 8em;
 }
+
 .colors {
     display: flex;
     flex-direction: row;
 }
+
 .colors>div {
     width: 20%;
     height: 1.4em;
 }
+
 .logo-img {
     width: 3em;
     display: flex;
     align-items: center;
     padding-left: 1em;
 }
+
 body {
     background-color: rgb(0, 0, 0);
 }
+
 .hero-container {
     position: relative;
     background-image: linear-gradient(to right, rgba(121, 121, 121, 0.11), rgba(104, 88, 170, 0.089));
 }
+
 .hero-container>div>img {
     width: 100%;
     opacity: 50%;
 }
+
 .hero-text {
     font-size: 2.5em;
     position: absolute;
@@ -75,29 +93,35 @@ body {
     width: 30%;
     text-align: left;
 }
+
 .hero-text>h2 {
     font-size: 0.5em;
     font-weight: lighter;
 }
-.hero-text>button{
+
+.hero-text>button {
     margin-top: 2em;
     padding: 1em 2em;
     font-size: 0.4em;
     color: white;
-    background-color: #7D1236;  
+    background-color: #7D1236;
     border: none;
     border-radius: 0.3em;
 }
+
 .hero-text>button:hover {
     background-color: #8E2A48;
 }
+
 .hero-text>button:active {
-    background-color: #640b29;  
+    background-color: #640b29;
 }
+
 .about-page {
     padding-bottom: 13em;
     background-image: linear-gradient(to right, #270101, #010520);
 }
+
 .card-content {
     display: flex;
     flex-direction: row;
@@ -111,6 +135,7 @@ body {
     border-radius: 0.3em;
     background-color: #292929;
 }
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -121,28 +146,34 @@ body {
     margin-right: 17%;
     max-width: 100%;
 }
+
 .card-content>div>div>img {
     max-width: 90%;
     max-height: 13em;
     padding-top: 2em;
     padding-bottom: 1.6em;
 }
+
 .pictogram {
     height: 4em;
 }
+
 .card-info {
     padding-left: 1.2em;
     padding-right: 1.2em;
 }
+
 .card-info>div>p {
     padding-top: 0.8em;
     color: #a0a0a0;
     text-shadow: 1px 1px #292929;
 }
+
 .card-colors {
     display: flex;
     flex-direction: column;
 }
+
 .card-colors>div {
     width: 1.8em;
     height: 33.3333%;
@@ -169,6 +200,7 @@ body {
     margin-bottom: 2rem;
     color: #ddd;
 }
+
 .button-group {
     display: flex;
     flex-direction: column;
@@ -190,15 +222,16 @@ body {
 }
 
 .btn.primary {
-    background-color: #7D1236;  
+    background-color: #7D1236;
     color: #fff;
 }
 
 .btn.primary:hover {
     background-color: #8E2A48;
 }
+
 .btn.primary:active {
-    background-color: #640b29;  
+    background-color: #640b29;
 }
 
 
@@ -242,25 +275,34 @@ body {
         margin-left: auto;
         margin-right: auto;
     }
+
     .card-container>.card-content:first-child {
         margin-right: 10%;
     }
 
 }
+
 @media (max-width: 768px) {
     .download-section {
-      min-width: 100%;
-      padding: 3rem 1rem;
+        min-width: 100%;
+        padding: 3rem 1rem;
     }
 
     .photo-row {
-      flex-direction: column;
-      align-items: center;
+        flex-direction: column;
+        align-items: center;
+        max-width: 90%;
     }
+
     .card-container>.card-content:first-child {
         margin-right: 0px;
     }
-  }
+}
+@media (max-width: 1263px) {
+    .photo-row>img {
+        margin-right: 0;
+    }
+}
 
 @media (max-width: 970px) {
     .card-container {
@@ -273,6 +315,7 @@ body {
         max-width: 50%;
         width: 100%;
     }
+
     .card-container>.card-content:first-child {
         margin-right: 0px;
     }
@@ -288,13 +331,16 @@ body {
         padding-bottom: 2em;
         font-size: 2em;
     }
+
     .hero-text>button {
         position: absolute;
         left: 40%;
     }
+
     .dropdown {
         display: block;
     }
+
     .standart-nav {
         display: none;
     }
@@ -310,40 +356,43 @@ body {
         width: 100%;
         position: relative;
     }
-    
+
     .dropbtn {
         padding: 15px 30px;
         font-size: 16px;
         color: white;
-        background-color: #7D1236;  
+        background-color: #7D1236;
         border: none;
         border-radius: 5px;
     }
+
     .dropdown-content {
         display: none;
         position: absolute;
-        top: 100%; 
+        top: 100%;
         left: 50%;
         transform: translateX(-50%);
         background-color: #2B2929;
         min-width: 160px;
-        box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
         z-index: 1;
         border: none;
         border-radius: 0.5em;
         text-align: center;
     }
-    
+
     .dropdown-content a {
         color: rgb(255, 255, 255);
         padding: 12px 16px;
         text-decoration: none;
         display: block;
     }
+
     .dropdown-content a:hover {
-        background-color:#222020;;
+        background-color: #222020;
+        ;
     }
-    
+
     .dropdown-content.show {
         display: block;
     }
@@ -354,6 +403,7 @@ footer {
     background-color: #303030;
 
 }
+
 .upper-footer {
     display: flex;
     flex-direction: row;
@@ -363,16 +413,19 @@ footer {
     max-width: 60%;
     margin-left: 20%;
 }
+
 .logo-footer {
     height: 100%;
     min-width: 20em;
 
 }
+
 .logo-footer>img {
     height: 90%;
     padding-top: 2em;
     padding-left: 2em;
 }
+
 .contacts-footer {
     height: 100%;
     max-height: 65%;
@@ -381,6 +434,7 @@ footer {
     flex-direction: column;
     justify-content: space-between;
 }
+
 .menu-footer {
     min-width: 33em;
     border: none;
@@ -390,19 +444,24 @@ footer {
     font-weight: bold;
     margin-bottom: 5em;
 }
+
 .menu-footer>div>a:not(:last-child) {
     margin-right: 3em;
 }
+
 .menu-footer>div>a {
     text-decoration: none;
     color: #313131;
 }
+
 .contacts-footer>h2 {
     font-size: 3em;
 }
+
 .contacts-footer>p {
     margin-left: 2em;
 }
+
 .copy-right {
     text-align: center;
     padding-bottom: 0.5em;
@@ -410,7 +469,6 @@ footer {
     font-weight: bold;
     font-size: 0.9em;
 }
-
 
 .how-to {
     background-color: #0e0e0e;
@@ -420,8 +478,9 @@ footer {
     color: white;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 20em 10em;
+    padding: 20em 10em 7em 10em;
 }
+
 .how-to-main {
     display: flex;
     flex-direction: column;
@@ -430,17 +489,23 @@ footer {
     margin-right: 15em;
     margin-bottom: 8em;
 }
+
 .how-to-text {
     font-size: 2em;
 }
+
 .how-to-text>p {
     font-size: 0.7em;
     margin: 1em 0em 0em 0.5em;
 }
+
 .how-to-btn {
     margin-top: 3em;
 }
-.video {
+
+iframe {
+    width: 784px;
+    height: 441px;
     max-width: 801px;
     max-height: auto;
 }
@@ -450,14 +515,37 @@ footer {
         padding: 0;
         font-size: 0.8em;
     }
+
     .how-to-main {
         text-align: center;
         margin: 0;
         padding: 10em 5em;
     }
+
     iframe {
-        width: 18em;
-        height: 13em;
-        margin-bottom: 5em;
+        max-width: 95%;
+        max-height: 80%;
+        margin-left: 2.5%;
+        margin-bottom: 10%;
+    }
+
+}
+
+@media (max-width: 1778px) {
+    .menu-footer {
+        display: none;
+    }
+
+    .logo-footer {
+        display: none;
+    }
+
+    .upper-footer {
+        justify-content: center;
+        text-align: center;
+    }
+
+    .contacts-footer>p {
+        margin: 0;
     }
 }
