--- a/src/css/main.css
+++ b/src/css/main.css
@@ -183,7 +183,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 12rem 12rem;
+    padding: 10% 20%;
     background: linear-gradient(to bottom, #181818, #1f1f1f);
     color: #f0f0f0;
 }
@@ -191,7 +191,7 @@ body {
 .download-content {
     text-align: center;
     width: 100%;
-    max-width: 900px;
+    max-width: 300em;
 }
 
 .download-text {
@@ -206,7 +206,7 @@ body {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
 }
 
 .btn {
@@ -260,9 +260,9 @@ body {
 
 .photo-row img {
     width: 100%;
-    margin: 2em 2em 0em 0em;
+    margin: 0em 2em 0em 0em;
     max-width: 400px;
-    border-radius: 8px;
+    border-radius: 4px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
